# pipex

./: .gitignore  CMakeLists.txt  Makefile
includes/: pipex.h
libft_func/: ft_split.c  ft_strjoin.c  ft_strlen.c  ft_strncmp.c  ft_substr.c
src/: childs.c  errors.c  pipex.c
